--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 title                       : Имунитет на стадо
-author                      : Kiril Zelenkovski
-copyright                   : "2020"  
+author                      : Кирил Зеленковски
+copyright                   : "Пролет, 2021"  
 logo                        : images/virus.png  
 exclude_patterns            : [_build, Thumbs.db, .DS_Store, "**.ipynb_checkpoints"]
 
@@ -24,12 +24,12 @@ html:
 
 
 launch_buttons:
-  notebook_interface        : "jupyterlab"  # The interface interactive links will activate ["classic", "jupyterlab"]
-  binderhub_url             : https://mybinder.org# The URL of the BinderHub (e.g., https://mybinder.org)
-  thebe                     : true  # Add a thebe button to pages (requires the repository to run on Binder)
-  colab_url                 : https://colab.research.google.com/drive/1vq_Ll-xAgFfW-kkDin5WUucNtY09HUka#scrollTo=1dE2kHUFW7ju # The URL of Google Colab (https://colab.research.google.com)
+  notebook_interface        : "jupyterlab"  
+  binderhub_url             : https://mybinder.org
+  thebe                     : false  
+  colab_url                 : https://colab.research.google.com/drive/1vq_Ll-xAgFfW-kkDin5WUucNtY09HUka#scrollTo=1dE2kHUFW7ju
 
 repository:
-  url                       : https://github.com/zelenelez/book_test # The URL to your book's repository
-  branch                    : main  # Which branch of the repository should be used when creating links
+  url                       : https://github.com/zelenelez/book_test 
+  branch                    : main  
 
