add new favicon

--- a/_toc.yml
+++ b/_toc.yml
@@ -67,5 +67,5 @@
     title: "Референци"
   - file: intresting
     title: "Интересни статии, видеа"
-  - url: https://github.com/zelenkastiot/COVID-19_book
+  - url: https://github.com/zelenelez/book_test
     title: "GitHub repository" 
