--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ execute:
 only_build_toc_files: true 
 
 html:
-  favicon                   : images/favicon.ico 
+  favicon                   : images/virus.ico
   use_edit_page_button      : true  
   use_repository_button     : true  
   use_issues_button         : true  
