--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Book settings
 title                       : "Имунитет на стадо"
-author                      : "Кирил Зеленковски"
+author                      : "Kiril Zelenkovski"
 copyright                   : "2021"  
 logo                        : images/virus.png  
 exclude_patterns            : [_build, Thumbs.db, .DS_Store, "**.ipynb_checkpoints"]
@@ -26,9 +26,23 @@ html:
 launch_buttons:
   notebook_interface        : "jupyterlab"  
   binderhub_url             : "https://mybinder.org"
-  thebe                     : false  
+  thebe                     : true  
   colab_url                 : "https://colab.research.google.com/drive/1vq_Ll-xAgFfW-kkDin5WUucNtY09HUka#scrollTo=1dE2kHUFW7ju"
 
 repository:
   url                       : https://github.com/zelenelez/book_test 
   branch                    : main  
+
+parse:
+  myst_enable_extensions:
+    - html_image
+    - amsmath
+    - colon_fence
+    - deflist 
+    - dollarmath
+    - html_admonition
+    - html_image
+    - linkify 
+    - replacements
+    - smartquotes
+    - substitution
